Format using Google Java Style